# STM32H745I-DISCO

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Drivers/BSP/: CMakeLists.txt
Drivers/BSP/Components/es_wifi/: es_wifi_conf.h
Drivers/BSP/STM32H745I-DISCO/: CMakeLists.txt  stm32h745i_discovery_errno.h  stm32h745i_discovery_lcd.h  stm32h745i_discovery_qspi.h
Drivers/CMSIS/: CMakeLists.txt
Drivers/STM32H7xx_HAL_Driver/: CMakeLists.txt
Src/: main.c  main.cpp  main.h  stm32h745i_discovery_conf.h  stm32h7xx_it.cpp  stm32h7xx_it.h  system.cpp  system.h
Src/BSP_Periph/: BSP_Common.cpp  BSP_Common.h  Display.cpp  Display.h  QSPI_Mem.cpp  QSPI_Mem.h  TouchScreen.cpp  TouchScreen.h
Src/Display/: Display.cpp  Display.h
Src/IIC/: IIC.cpp  IIC.h
Src/TIM/: TIM.cpp  TIM.h
Src/TouchScreen/: TouchScreen.cpp  TouchScreen.h
Src/lv_port/: lv_port_disp.c  lv_port_disp.h  lv_port_fs.c  lv_port_fs.h
patch/: CMakeLists.txt  clear.sh  copy.sh
patch/cmsis/: CMakeLists.txt
toolchains/iar/: stm32_toolchain_iar.cmake
